<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.CoreBeliefScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_gravity="start">

    <Button
        android:id="@+id/view_core_profile_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_white_option_button"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:fontFamily="@font/medium"
        android:textAllCaps="false"
        android:textSize="22dp"
        android:text="@string/view_core_profile"
        android:drawableLeft="@drawable/view_core_belief"/>



    <Button
        android:id="@+id/view_core_test_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rounded_white_option_button"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:fontFamily="@font/medium"
        android:textAllCaps="false"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="22dp"
        android:layout_below="@+id/view_core_profile_button"
        android:text="@string/view_core_test"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/take_core_resize"/>

    <Button
        android:id="@+id/take_core_test_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rounded_white_option_button"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:fontFamily="@font/medium"
        android:textAllCaps="false"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="22dp"
        android:layout_below="@+id/view_core_profile_button"
        android:text="@string/take_core_test"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/take_core_belief"


        />
    </LinearLayout>

</ScrollView>