<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.login.DesiredProfileScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_gravity="start">



    <Button
        android:id="@+id/view_desire_profile_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rounded_white_option_button"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/medium"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:text="@string/view_desire_test"
        android:drawableLeft="@drawable/view_desire_test"


        />

        <Button
            android:id="@+id/vie_desire_test_button"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rounded_white_option_button"
            android:layout_centerHorizontal="true"
            android:paddingLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/medium"
            android:textAllCaps="false"
            android:textSize="25dp"
            android:text="@string/vieww_desire_test"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/take_desire_resize"


            />
    <Button
        android:id="@+id/take_desire_test_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rounded_white_option_button"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/medium"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:layout_below="@+id/view_desire_test_button"
        android:text="@string/take_desire_test"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/take_desire_test"


        />
    </LinearLayout>


</ScrollView>