<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bginside"
    tools:context=".ui.login.HomePage1">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#00000000">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00000000"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                >

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:layout_toStartOf="@+id/notifications_home_page"
                    android:layout_toLeftOf="@+id/notifications_home_page"
                    android:text="Dashboard"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:id="@+id/notifications_home_page"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/notification" />

                <TextView
                    android:id="@+id/unreadnotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/notifications_home_page"
                    android:layout_alignRight="@id/notifications_home_page"
                    android:text="  "
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:textColor="#FFF"
                    android:background="@drawable/round_textview"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>





    <ScrollView
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/linear_layout_1"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/social_preference_button"
                    android:drawableLeft="@drawable/social_profile"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/social_profile"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/neuro_profile_button"
                    android:drawableLeft="@drawable/neuro_profile"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/neuro_profile"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_below="@+id/linear_layout_1"
                android:id="@+id/linear_layout_2"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/partner_preference_button"
                    android:drawableLeft="@drawable/partner_preference"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/partner_preference"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/core_belief_button"
                    android:drawableLeft="@drawable/core_belief"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/core_belief"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/linear_layout_3"
                android:layout_below="@+id/linear_layout_2"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/find_neuro_match_button"
                    android:drawableLeft="@drawable/find"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/find_neuro_match"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/show_neuro_match"
                    android:drawableLeft="@drawable/show_match"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/show_neuro_match"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/linear_layout_4"
                android:layout_below="@+id/linear_layout_3"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >

                <Button


                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/requests_button"
                    android:drawableLeft="@drawable/request"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="Requests"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/my_chatt"
                    android:fontFamily="@font/medium"
                    android:textAllCaps="false"
                    android:paddingLeft="10dp"
                    android:id="@+id/my_chat_button"
                    android:background="@drawable/rounded_white_option_button"
                    android:drawableLeft="@drawable/chat"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"

                android:id="@+id/linear_layout_5"
                android:layout_below="@id/linear_layout_4"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >


                <Button
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/manual_match_button"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/manual_match"
                    android:text="@string/manual_match"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/buy_tokens_button"
                    android:drawableLeft="@drawable/buy_token"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/buy_tokens"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/linear_layout_6"
                android:layout_below="@+id/linear_layout_5"

                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/eeg_appointment_button"
                    android:drawableLeft="@drawable/eeg"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/eeg_appointment"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/notification_button_main"
                    android:drawableLeft="@drawable/notification_btn"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="Notification"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/linear_layout_7"
                android:layout_below="@+id/linear_layout_6"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/complete_match"
                    android:drawableLeft="@drawable/finalize_resize"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/finalize"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/complete_match_2"
                    android:drawableLeft="@drawable/notification_btn"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:text="Notification"
                    android:visibility="invisible"
                    android:textAllCaps="false"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/rounded_white_option_button"
                    android:layout_height="120dp"/>

            </LinearLayout>




        </RelativeLayout>















    </ScrollView>
</LinearLayout>